--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
-      if: ${{ secrets.CODECOV_TOKEN != '' }}
+      continue-on-error: true
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
