--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ aiosmtplib = ">=4.0.0"
 pydantic-settings = {extras = ["toml"], version = ">=2.8.0"}
 tomli-w = ">=1.2.0"
 tomli = ">=2.0.0"
+cryptography = ">=42.0.0"
+keyring = ">=25.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
